[ADD]: offer service

--- a/.env.sample
+++ b/.env.sample
@@ -1,3 +1,17 @@
 COST_PER_KG=10
 COST_PER_KM=5
 BASE_DELIVERY_COST=100
+
+OFFERS=OFR001,OFR002
+
+OFR001_DISCOUNT_PERCENT=10
+OFR001_MIN_WEIGHT=70
+OFR001_MAX_WEIGHT=200
+OFR001_MIN_DISTANCE=0
+OFR001_MAX_DISTANCE=199
+
+OFR002_DISCOUNT_PERCENT=7
+OFR002_MIN_WEIGHT=100
+OFR002_MAX_WEIGHT=250
+OFR002_MIN_DISTANCE=50
+OFR002_MAX_DISTANCE=150
