[UPDATE]: env sample

--- a/.env.sample
+++ b/.env.sample
@@ -1,17 +1,26 @@
 COST_PER_KG=10
 COST_PER_KM=5
-BASE_DELIVERY_COST=100
 
-OFFERS=OFR001,OFR002
+OFFERS=OFR001,OFR002,OFR003
 
+# OFR001: 10% Discount, applicable for weight 70-200 and distance 0-199
 OFR001_DISCOUNT_PERCENT=10
 OFR001_MIN_WEIGHT=70
 OFR001_MAX_WEIGHT=200
 OFR001_MIN_DISTANCE=0
 OFR001_MAX_DISTANCE=199
 
+# OFR002: 7% Discount, applicable for weight 100-250 and distance 50-150
 OFR002_DISCOUNT_PERCENT=7
 OFR002_MIN_WEIGHT=100
 OFR002_MAX_WEIGHT=250
 OFR002_MIN_DISTANCE=50
 OFR002_MAX_DISTANCE=150
+
+# OFR003: 5% Discount, applicable for weight 10-150 and distance 50-250
+OFR003_DISCOUNT_PERCENT=5
+OFR003_MIN_WEIGHT=10
+OFR003_MAX_WEIGHT=150
+OFR003_MIN_DISTANCE=50
+OFR003_MAX_DISTANCE=250
+
